--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,14 @@
     <p>&ensp;MyForm</p>
 </mat-toolbar>
 <!-- <app-formview></app-formview> -->
-<router-outlet></router-outlet>
+<div fxLayout="row" fxLayoutAlign="space-evenly">
+    <div>
+    <!-- <div fxFlex="1 1 40%"> -->
+        <router-outlet></router-outlet>
+    </div>
+    <div>
+    <!-- <div fxFlex="1 1 auto"> -->
+        <img src="../images/icons/icon-192x192.png" alt="Nice image">
+    </div>
+</div>
+<!-- height="42" width="42"> -->
