--- a/src/app/components/formview.component.html
+++ b/src/app/components/formview.component.html
@@ -101,8 +101,8 @@
 
     <div>
         <button mat-button name="clear" type="reset">Clear</button>
-        <!-- <button mat-button name="reply" type="submit" [disabled]="form.invalid">Submit</button> -->
-        <button mat-button name="reply" type="submit">Submit</button>
+        <button mat-button name="reply" type="submit" [disabled]="form.invalid">Submit</button>
+        <!-- <button mat-button name="reply" type="submit">Submit</button> -->
     </div>
 
 </form>
