--- a/src/app/components/formview.component.html
+++ b/src/app/components/formview.component.html
@@ -43,7 +43,7 @@
             <mat-radio-button value="Male" selected> Male </mat-radio-button>
             <mat-radio-button value="Female"> Female </mat-radio-button>
         </mat-radio-group>
-        <mat-error *ngIf="gender.invalid">Gender invalid!</mat-error>
+        <mat-error *ngIf="gender.invalid">Please select a gender.</mat-error>
     </div>
     <br>
 
