--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 #midLevel {
     margin-right: 5%;
     margin-left: 5%;
-    border: blue solid;
+    /* border: blue solid; */
   }
 
   #topLevel{
