--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,8 @@
         </div>
         <div>
             <!-- <div fxFlex="1 1 auto"> -->
-            <img src="../images/icons/icon-152x152.png" alt="Nice image">
+            <!-- <img src="../images/icons/icon-152x152.png" alt="Nice image"> -->
+            <img src="../assets/icon-152x152.png" alt="Nice image">
         </div>
     </div>
     <!-- height="42" width="42"> -->
